--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
   - "3.5-dev"  # 3.5 development branch
   - "3.6"
 install:
+  - pip install pipenv
   - pipenv install
 script:
   - pytest tests.py
