--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
   - pip install pipenv
   - pipenv install
 script:
-  - pytest tests.py
+  - pytest tests/test_cli.py
   - coverage run tests.py
